re PR c++/16193 (Bootstrap failure in libstdc++-v3)

PR c++/16193
	* parser.c (cp_parser_set_decl_spec_type): Refine test for
	redefinition of built-in types.

	PR c++/16193
	* g++.dg/parse/redef1.C: New test.

From-SVN: r83740